--- a/frontend-react-js/src/index.css
+++ b/frontend-react-js/src/index.css
@@ -1,8 +1,13 @@
+:root {
+  --bg: rgb(61,13,123);
+  --fg: #000
+}
+
 * { box-sizing: border-box; }
 html,body { 
   height: 100%; 
   width: 100%; 
-  background: rgb(14,3,28);
+  background: rgb(61, 13, 123);
 }
 
 body {
